--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,7 +21,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <p class="navbar-brand">ALS REGISTRY</p>
+        <a href="/main" class="navbar-brand">ALS REGISTRY</a>
       </div>
       <div class="collapse navbar-collapse" id="alsregistry">
         <ul class="nav navbar-nav navbar-right">
@@ -33,7 +33,8 @@
               <li><a href="/add-pat">ADD PATIENT</a></li>
             </ul>
           </li>
-          <li><a class="names" href="/diagrams">DIAGRAMS</a></li>
+          <!-- <li><a class="names" href="/diagrams">DIAGRAMS</a></li> -->
+          <!-- <li><a class="names" href="/main">HOME</a></li> -->
           <li><a class="names" href="/survey">SURVEY</a></li>
           <li class="dropdown ">
             <a href="#" class="dropdown-toggle names" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ACCOUNT <span class="caret"></span></a>
