--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,11 +11,15 @@ table {
   width: 100%;
   font-size: 14px;
   color: #444444;
-  text-align: left;
+  text-align: center;
+}
+table.container-fluid td {
+  width: 12.5%;
 }
 
 /* Style for the table headers */
 th {
+  text-align: center;
   background-color: #f2f2f2;
   color: #000000;
   font-weight: bold;
@@ -153,48 +157,6 @@ tr:hover {
     margin-top: 50px;
     text-align: right;
 }
-/* .dialog-container {
-  display: none;
-  position: fixed;
-  z-index: 9999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
 
-.dialog-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.dialog-box h2 {
-  margin-top: 0;
-}
-
-.dialog-box p {
-  margin-bottom: 20px;
-}
-
-.dialog-box button {
-  background-color: #dc3545;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.dialog-box button:hover {
-  background-color: #c82333;
-} */
 /* Diagrams */
 
