--- a/views/add-pat.ejs
+++ b/views/add-pat.ejs
@@ -3,14 +3,14 @@
 
 <section>
     <h1 class="titles">Add a Patient</h1>
-    <form action="/add-pat" method="post">
+    <form action="/add-pat" method="post" id="myForm">
         <div class="container-fluid pat-container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-sm-6">
                   <label class="form-label">First Name :</label>
                   <input type="text" class="form-control" name="fname" placeholder="Enter First Name" required>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-sm-6">
                   <label class="form-label">Address :</label>
                   <input type="text" class="form-control" name="address" placeholder="Enter Address" required>
                 </div>
@@ -18,32 +18,32 @@
         
         
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-sm-6">
                 <label class="form-label">Last Name :</label>
                 <input type="text" class="form-control" name="lname" placeholder="Enter Last Name" required>
               </div>
-              <div class="col-lg-6">
+              <div class="col-sm-6">
                 <label class="form-label">Social Security Number :</label>
                 <input type="text" class="form-control" name="ssn" placeholder="Social Security Number" required>
               </div>
             </div>
             
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-sm-6">
                     <label class="form-label">First Visit :</label>
                     <input type="date" class="form-control" name="firstv" required>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-sm-6">
                     <label class="form-label">Age :</label>
                     <input type="text" class="form-control" name="age" placeholder="Enter Second Name" required>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-sm-6">
                     <label class="form-label">Phone Number :</label>
                     <input type="text" class="form-control" name="phone" placeholder="Enter Phone" required>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-sm-6">
                     <label class="form-label">Sex :</label>
                     <div class="check">
                     <label>Female</label>
@@ -54,14 +54,40 @@
                   </div>
                 </div>
                   <div style="text-align: right;"> 
-                    <button style="background-color: #d2691e; color: aliceblue;" class="btn btn-default" type="submit">Save Patient</button>
+                    <button id="savePatientBtn" style="background-color: #d2691e; color: aliceblue;" class="btn btn-default" type="submit"data-toggle="modal" data- 
+                    target="#myModal">Save Patient</button>
                   </div>
                 </div>
     </form>
 </section>
-
-
-
-
-
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Patient Added</h4>
+      </div>
+      <div class="modal-body">
+        You can view your patients and make a survey.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+    document.getElementById('myForm').addEventListener('submit', function(event) {
+  event.preventDefault(); // prevent the default form submission
+  let err = false;
+  // check for any errors here
+  if (!err) {
+    $('#myModal').modal('show'); // show the modal if there are no errors
+    // submit the form data using AJAX here
+  }
+});
+$('#myModal').on('hidden.bs.modal', function (e) {
+  document.getElementById('myForm').submit();
+})
+</script>
 <%- include("partials/footer") %> 
