--- a/views/patients.ejs
+++ b/views/patients.ejs
@@ -2,43 +2,72 @@
 
 <section id="patient">
 <h1 class="titles">Patients</h1>
-<!-- <a role="button" href="/add" >View patients</a>
-<label for="site-search">Search a patient</label>
-<input type="search" placeholder="Search a patient">
-<button type="submit">Search</button> -->
 
 <% if (user.patients.length === 0) { %>
     <p>You currently have no patients. Please <a href="/add-pat">add a patient</a>.</p>
   <% } else { %>
-<table>
+<table class="container-fluid">
     <thead>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
+          <th>Patient Name</th>
             <th>Address</th>
             <th>Sex</th>
             <th>Age</th>
             <th>SSN</th>
             <th>Phone</th>
             <th>First Visit</th>
+            <th>Remove Patient</th>
         </tr>
     </thead>
     <tbody>
         <% for (var i = 0; i < user.patients.length; i++) { %>
             <tr>
-              <td> <%= user.patients[i].fname %></td>
-              <td> <%= user.patients[i].lname %></td>
+              <td> <%= user.patients[i].fname %> <%= user.patients[i].lname %></td>
+              <!-- <td> </td> -->
               <td> <%= user.patients[i].address %></td>
               <td> <%= user.patients[i].sex %></td>
               <td> <%= user.patients[i].age %></td>
               <td> <%= user.patients[i].ssn %></td>
               <td> <%= user.patients[i].phone %></td>
               <td> <%= user.patients[i].fv.toDateString() %></td>
+              <td>
+                <form action="/patients/<%= user.patients[i]._id %>" id="patient-form" method="post">
+                  <button type="button" class="btn btn-danger" onclick="deletePatient('<%= user.patients[i]._id %>')" data-toggle="modal" data-target="#myPatients<%= user.patients[i]._id %>">Delete</button>
+                  <div class="modal fade" id="myPatients<%= user.patients[i]._id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="myModalLabel">Delete Patient</h4>
+                        </div>
+                        <div class="modal-body">
+                          Are you sure you want to delete this Patient? This action cannot be undone.
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          <button type="submit" class="btn btn-danger" id="delete-patient-btn">Delete Patient</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </td>
             </tr>
           <% } %>
           <% } %>
     </tbody>
 </table>
+<script>
+  function deletePatient(patientId) {
+  $("#delete-patient-id").val(patientId);
+  $("#myModal").modal("show");
+}
+$(document).ready(function() {
+  $("#delete-patient-btn").click(function() {
+    $("#delete-form").submit();
+  });
+});
+</script>
 </section>
 
 
