--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="icon" href="pictures/main-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/main.css">
-  <title>Document</title>
+  <title>ALS Registry</title>
 </head>
 <body style="background-color: #F5F5DC;">
   <nav class="navbar navbar-default">
@@ -25,6 +26,7 @@
       </div>
       <div class="collapse navbar-collapse" id="alsregistry">
         <ul class="nav navbar-nav navbar-right">
+          <!-- <li><a class="names" href="/main">HOME</a></li> -->
           <li class="dropdown ">
             <a href="#" class="dropdown-toggle names" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PATIENTS <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -33,8 +35,6 @@
               <li><a href="/add-pat">ADD PATIENT</a></li>
             </ul>
           </li>
-          <!-- <li><a class="names" href="/diagrams">DIAGRAMS</a></li> -->
-          <!-- <li><a class="names" href="/main">HOME</a></li> -->
           <li><a class="names" href="/survey">SURVEY</a></li>
           <li class="dropdown ">
             <a href="#" class="dropdown-toggle names" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ACCOUNT <span class="caret"></span></a>
