--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/navbar") %> 
-<h1 class="titles" style="text-align: left; margin-left: 60px;" >Account Settings</h1>
+<h1 class="titles">Account Settings</h1>
 <section>
     <form action="/settings" id="delete-form" method="post">
         <div class="container-fluid pat-container" >
