--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="pictures/main-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/lndg.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
@@ -11,7 +12,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/3ba76482b4.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>ALS Registry</title>
 </head>
 <body>
     <style>
@@ -46,7 +47,7 @@
       <section id="main-page">
         <div class="container-fluid">
           <h1>Welcome to ALS Registry</h1>
-          <p style="font-size: 15px;"> Platform for patients with <strong>Amyotrophic Lateral Sclerosis</strong>.</p>
+          <p style="font-size: 19px;"> Platform for patients with <strong>Amyotrophic Lateral Sclerosis</strong>.</p>
           <div class="row images">
             <div class="col-xs-6">
               <img src="pictures/ionio.png" alt="Ionio Panepistimio">
