--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/log-sgn.css">
+    <link rel="icon" href="pictures/main-favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3ba76482b4.js" crossorigin="anonymous"></script>
     <title>Log In</title>
 </head>
