--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/log-sgn.css">
+    <link rel="icon" href="pictures/main-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3ba76482b4.js" crossorigin="anonymous"></script>
     <title>Sign Up</title>
@@ -41,10 +42,6 @@
             <label class="form-label">Password :</label>
             <input type="password" class="form-control" name="password" placeholder="Enter Password" required>
           </div>
-          <!-- <div class="col">
-            <label class="form-label">Confirm Password :</label>
-            <input type="password" class="form-control" name="cnfrm-pwd" placeholder="Confirm Password" required>
-          </div> -->
           <div class="sign-button">
             <button type="submit" class="btn btn-primary btn-lg">Submit Form</button>
           </div>
