--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -4,34 +4,34 @@
     <form action="/settings" id="delete-form" method="post">
         <div class="container-fluid pat-container" >
             <div class="row settings">
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <h4> Username: <span class="set-span" value="user"><%= user %></span> </h4>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <button type="button">Change Username</button>
                 </div>
             </div>
             <div class="row settings">
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <h4>Name: <span class="set-span"><%= name %></span></h4>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <button type="button">Change Name</button>
                 </div>
             </div>
             <div class="row settings">
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <h4>Last Name: <span class="set-span"><%= lname %></span></h4>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <button type="button">Change Last Name</button>
                 </div>
             </div>
             <div class="row settings">
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <h4>Email: <span class="set-span"><%= email %></span></h4>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <button type="button">Change Email</button>
                 </div>
             </div>
