--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -11,7 +11,7 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <form action="/sign-up" method="post">
+    <form action="/sign-up" method="post" style="padding: 0 1%;">
         <div class="container-fluid">
           <h1 class="header">Sign Up</h1>
           <div class="row">
