--- a/views/add-pat.ejs
+++ b/views/add-pat.ejs
@@ -2,89 +2,168 @@
 
 <section>
     <h1 class="titles">Add a Patient</h1>
-    <form action="/add-pat" method="post" id="myForm">
-        <div class="container-fluid pat-container">
-            <div class="row">
-                <div class="col-sm-6">
-                  <label class="form-label">First Name :</label>
-                  <input type="text" class="form-control" name="fname" placeholder="Enter First Name" required>
-                </div>
-                <div class="col-sm-6">
-                  <label class="form-label">Address :</label>
-                  <input type="text" class="form-control" name="address" placeholder="Enter Address" required>
-                </div>
-              </div>
-        
+    <section id="step-1">
+     <form action="/add-pat" method="post" id="myForm">
+      <div class="container-fluid pat-container">
+        <div class="row">
+            <div class="col-sm-6">
+              <label class="form-label">First Name :</label>
+              <input type="text" class="form-control" name="fname" placeholder="Enter First Name" required>
+            </div>
+            <div class="col-sm-6">
+              <label class="form-label">Address :</label>
+              <input type="text" class="form-control" name="address" placeholder="Enter Address" required>
+            </div>
+          </div>
+    
+    
+        <div class="row">
+          <div class="col-sm-6">
+            <label class="form-label">Last Name :</label>
+            <input type="text" class="form-control" name="lname" placeholder="Enter Last Name" required>
+          </div>
+          <div class="col-sm-6">
+            <label class="form-label">Social Security Number :</label>
+            <input type="text" class="form-control" name="ssn" placeholder="Social Security Number" required>
+          </div>
+        </div>
         
             <div class="row">
               <div class="col-sm-6">
-                <label class="form-label">Last Name :</label>
-                <input type="text" class="form-control" name="lname" placeholder="Enter Last Name" required>
+                <label class="form-label">First Visit :</label>
+                <input type="date" class="form-control" name="firstv" required>
               </div>
               <div class="col-sm-6">
-                <label class="form-label">Social Security Number :</label>
-                <input type="text" class="form-control" name="ssn" placeholder="Social Security Number" required>
+                <label class="form-label">Age :</label>
+                <input type="text" class="form-control" name="age" placeholder="Enter Second Name" required>
               </div>
             </div>
-            
-                <div class="row">
-                  <div class="col-sm-6">
-                    <label class="form-label">First Visit :</label>
-                    <input type="date" class="form-control" name="firstv" required>
-                  </div>
-                  <div class="col-sm-6">
-                    <label class="form-label">Age :</label>
-                    <input type="text" class="form-control" name="age" placeholder="Enter Second Name" required>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-6">
-                    <label class="form-label">Phone Number :</label>
-                    <input type="text" class="form-control" name="phone" placeholder="Enter Phone" required>
-                  </div>
-                  <div class="col-sm-6">
-                    <label class="form-label">Sex :</label>
-                    <div class="check">
-                    <label>Female</label>
-                    <input type="radio"  name="gender" value="female" required checked="checked">
-                    <label>Male</label>
-                    <input type="radio"  name="gender" value="male" required>
-                  </div>
-                  </div>
-                </div>
-                  <div style="text-align: right;"> 
-                    <button id="savePatientBtn" style="background-color: #d2691e; color: aliceblue;" class="btn btn-default" type="submit"data-toggle="modal" data- 
-                    target="#myModal">Save Patient</button>
-                  </div>
-                </div>
-    </form>
-</section>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Patient Added</h4>
+            <div class="row">
+              <div class="col-sm-6">
+                <label class="form-label">Phone Number :</label>
+                <input type="text" class="form-control" name="phone" placeholder="Enter Phone" required>
+              </div>
+              <div class="col-sm-6">
+                <label class="form-label">Sex :</label>
+                <div class="check">
+                <label>Female</label>
+                <input type="radio"  name="gender" value="female" required checked="checked">
+                <label>Male</label>
+                <input type="radio"  name="gender" value="male" required>
+              </div>
+              </div>
+            </div>
+    
+        <div style="text-align: right;">
+          <button id="nextStepBtn" style="background-color: #146C94; color: aliceblue;" class="btn btn-default" type="button">Next Step</button>
+        </div>
       </div>
-      <div class="modal-body">
-        You can view your patients and make a survey.
+    </section>
+    
+    <section id="step-2" style="display: none;">
+      <div class="container-fluid pat-container">
+        <div class="row">
+          <div class="col-sm-6">
+            <label class="form-label">First Visit :</label>
+            <input type="date" class="form-control" name="firstv" required>
+          </div>
+          <div class="col-sm-6">
+            <label class="form-label">Age :</label>
+            <input type="text" class="form-control" name="age" placeholder="Enter Age" required>
+          </div>
+        </div>
+    
+        <div class="row">
+          <div class="col-sm-6">
+            <label class="form-label">Phone Number :</label>
+            <input type="text" class="form-control" name="phone" placeholder="Enter Phone" required>
+          </div>
+          <div class="col-sm-6">
+            <label class="form-label">Sex :</label>
+            <div class="check">
+              <label>Female</label>
+              <input type="radio" name="gender" value="female" required checked="checked">
+              <label>Male</label>
+              <input type="radio" name="gender" value="male" required>
+            </div>
+          </div>
+        </div>
+    
+        <div style="text-align: right;">
+          <button id="savePatientBtn" style="background-color: #146C94; color: aliceblue;" class="btn btn-default" type="submit" data-toggle="modal" data-target="#myModal">Save Patient</button>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    </section>
+
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Patient Added</h4>
+        </div>
+        <div class="modal-body">
+          You can view your patients and make a survey.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<script>
-    document.getElementById('myForm').addEventListener('submit', function(event) {
-  event.preventDefault(); // prevent the default form submission
-  let err = false;
-  if (!err) {
-    $('#myModal').modal('show'); 
+</form>
+</section>
+    <script>
+
+
+const step1 = document.querySelector('#step-1');
+const step2 = document.querySelector('#step-2');
+const nextBtn = document.querySelector('#nextStepBtn');
+const saveBtn = document.querySelector('#savePatientBtn');
+
+// When the "Next Step" button is clicked, hide step 1 and show step 2
+nextBtn.addEventListener('click', function() {
+  const requiredInputs = document.querySelectorAll('#step-1 input[required]');
+  let allInputsFilled = true;
+  
+  // Loop through each required input and check if it has a value
+  for (let i = 0; i < requiredInputs.length; i++) {
+    if (!requiredInputs[i].value) {
+      allInputsFilled = false;
+      break;
+    }
+  }
+  
+  // If all required inputs are filled, hide step 1 and show step 2
+  if (allInputsFilled) {
+    step1.style.display = 'none';
+    step2.style.display = 'block';
+  } else {
+    alert('Please fill all required inputs before moving to the next step.');
   }
 });
+
+document.getElementById('myForm').addEventListener('submit', function(event) {
+  event.preventDefault();
+  let err = false;
+  if (!err) {
+    const firstNameInput = document.querySelector('input[name="fname"]');
+    const lastNameInput = document.querySelector('input[name="lname"]');
+    const addressInput = document.querySelector('input[name="address"]');
+
+    const firstNameValue = firstNameInput.value.charAt(0).toUpperCase() + firstNameInput.value.slice(1).toLowerCase();
+    const lastNameValue = lastNameInput.value.charAt(0).toUpperCase() + lastNameInput.value.slice(1).toLowerCase();
+    const addressValue = addressInput.value.charAt(0).toUpperCase() + addressInput.value.slice(1).toLowerCase();
+    firstNameInput.value = firstNameValue;
+    lastNameInput.value = lastNameValue;
+    addressInput.value = addressValue;
+
+    $('#myModal').modal('show');
+  }
+});
+
 $('#myModal').on('hidden.bs.modal', function (e) {
   document.getElementById('myForm').submit();
-})
+});
 </script>
 <%- include("partials/footer") %> 
