--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -11,9 +11,9 @@
     <title>Log In</title>
 </head>
 <body style="min-height: 85vh;">
-    <form class="sign-in" action="" method="post" onsubmit="">
+    <form class="sign-in" action="" method="post" onsubmit="" style="padding: 0 1%;">
 
-        <div class="container-fluid" style="max-width: 650px; margin: 100px auto;">
+        <div class="container-fluid" style="max-width: 650px; margin: 99px auto;">
           <h1 class="header">Log In</h1>
             <div class="row">
             <div class="col-xs-6 uni-img">
@@ -37,10 +37,6 @@
                 </div>
                 <div class="log-in-button">
                     <button type="submit" class="btn btn-primary btn-lg">Log In</button>
-                  </div>
-                  
-                <div class="col pass-reset">
-                    <a style="color: #1E88E5;" href="/pass-reset">Forgot Password?</a>
                   </div>
             </div>
           </div>
