--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="/css/main.css">
   <title>ALS Registry</title>
 </head>
-<body style="background-color: #F5F5DC;">
+<!-- beige -->
+<body style="background-color: #F6F1F1;">
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
