--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -189,10 +189,26 @@
   
 
 <div class="sur-res">
-      <button class="act-sur btn btn-primary" type="submit">Save Survey</button>
+      <button class="act-sur btn btn-primary" type="submit" data-toggle="modal" data-target="#myModal">Save Survey</button>
 </div>
 </div>
  </form> 
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Survey Added</h4>
+      </div>
+      <div class="modal-body">
+        You can view your surveys for this patient in View History.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
     
     <script>
       const buttonGroups = document.querySelectorAll('.button-group');
@@ -212,5 +228,18 @@
   });
 });
     </script> 
+    <script>
+      document.getElementById('survey-form').addEventListener('submit', function(event) {
+     event.preventDefault();
+     let err = false;
+     if (!err) {
+       $('#myModal').modal('show');
+     }
+   });
+   
+   $('#myModal').on('hidden.bs.modal', function (e) {
+     document.getElementById('survey-form').submit();
+   });
+   </script>
       </section>
 <%- include("partials/footer") %> 
