--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,7 +2,18 @@
 <h1 class="titles">Welcome <%= user %></h1>
 <div class="container-fluid prologue">
 <p class="main-p mg-main" style="margin-top: 3%;">This is the <span class="target-m">ALS Registry</span> . A registry for patients with <span class="target-m">ALS(Amyotrophic Lateral Sclerosis)</span>.</p>
-<p class="main-p">ALS Registry is a new way of helping doctors classifying their patients and being able to keep track of the evolution of the desease, through our survey.</p>
+<div class="row">
+    <div class="col-lg-8 col-md-7 col-sm-6">
+        <p class="main-p">ALS Registry is a new way of helping doctors classifying their patients and being able to keep track of the evolution of the desease, through our survey.</p>
+    
+    </div> 
+</div>
+<div class="row">
+    <div class="col-lg-8 col-md-7 col-sm-6">
+        <p class="main-p">ALS Registry is a new way of helping doctors classifying their patients and being able to keep track of the evolution of the desease, through our survey.</p>    
+    </div> 
+</div>
+
 <p class="main-p" style="margin: 30px 0 70px 0;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
 </div>
 
